After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 115503 - Autofill date doesn't work properly in 1.1.19
Autofill date doesn't work properly in 1.1.19
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.1.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-06-19 00:46 UTC by Mark Santaniello
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mark Santaniello 2003-06-19 00:46:08 UTC
Autofill date doesn't work properly in 1.1.19 
 
To reproduce, enter sequential days in A1 and A2.  Select both cells and 
then drag the autofill square downward to instruct gnumeric to autofill 
the cells below.  Gnumeric should pick up and continue to increment the 
date by one day.  It will not do this.  Instead, it will merely repeat 
the value of A2. 
 
Additionally, ctrl-fill is incrementing by years instead of days.
Comment 1 Adrian Custer 2003-06-19 01:24:53 UTC
1) new gnumeric
2) A1 gets 12/24/2000 (expand the column to see the number)
3) select A1
4) Hold the Ctrl key and with the mouse grab the lower righthand
corner of the selection box.
5) drag downwards to fill

--> I would expect the days to increment but gnumeric increments the
years. Gnumeric 1.0.x version increment the days.

ciao,
adrian
Comment 2 Andreas J. Guelzow 2003-06-27 05:48:49 UTC
hmm,

looking at the code this is not surprising:

cell_format_classify sets 	
        info->date_has_days = FALSE;
	info->date_has_months = FALSE;
and tehr eis now way this ever changes before cell_format_classify
returns. So autofill can only assume to increment years.
Comment 3 Andreas J. Guelzow 2003-06-27 14:55:19 UTC
fixed in cvs